math-core/src/snapshots/math_core__tests__notag_in_the_wild.snap
---
source: math-core/src/lib.rs
expression: "(\\notag + 1)"
---
<math>
    <mo stretchy="false">(</mo>
    <mo lspace="0" rspace="0">+</mo>
    <mn>1</mn>
    <mo stretchy="false">)</mo>
</math>
