math-core/src/snapshots/math_core__tests__number_with_dot.snap
---
source: math-core/src/lib.rs
expression: 4.x
---
<math>
    <mn>4</mn>
    <mi>.</mi>
    <mi>x</mi>
</math>
