math-core/src/snapshots/math_core__tests__odv.snap
---
source: math-core/src/lib.rs
expression: "\\odv{f}{x}"
---
<math>
    <mfrac>
        <mrow>
            <mi mathvariant="normal">d</mi>
            <mi>f</mi>
        </mrow>
        <mrow>
            <mi mathvariant="normal">d</mi>
            <mi>x</mi>
        </mrow>
    </mfrac>
</math>
