math-core/src/snapshots/math_core__tests__operator_name.snap
---
source: math-core/src/lib.rs
expression: "\\operatorname{sn} x"
---
<math>
    <mi>sn</mi>
    <mi>x</mi>
</math>
