math-core/src/snapshots/math_core__tests__operator_name_with_single_char.snap
---
source: math-core/src/lib.rs
expression: "\\operatorname{a}"
---
<math>
    <mi mathvariant="normal">a</mi>
</math>
