math-core/src/snapshots/math_core__tests__operator_name_with_space_cmd.snap
---
source: math-core/src/lib.rs
expression: "\\operatorname{arg\\,max}"
---
<math>
    <mo lspace="0" rspace="0">arg max</mo>
</math>
