math-core/src/snapshots/math_core__tests__operator_name_with_spaces.snap
---
source: math-core/src/lib.rs
expression: "\\operatorname{ hel lo }"
---
<math>
    <mo lspace="0.1667em" rspace="0.1667em">hello</mo>
</math>
