math-core/src/snapshots/math_core__tests__operatorname_with_begin.snap
---
source: math-core/src/lib.rs
expression: "\\operatorname{\\begin{matrix}}"
---
Position: 14
NotValidInTextMode(
    Begin(
        Matrix,
    ),
)
