math-core/src/snapshots/math_core__tests__operatorname_with_end.snap
---
source: math-core/src/lib.rs
expression: "\\operatorname{\\end{matrix}}"
---
Position: 14
UnexpectedClose(
    End,
)
