math-core/src/snapshots/math_core__tests__operatorname_with_other_operator.snap
---
source: math-core/src/lib.rs
expression: "x\\operatorname{\\max}"
---
<math>
    <mi>x</mi>
    <mi>max</mi>
</math>
