math-core/src/snapshots/math_core__tests__operatorname_with_text_command.snap
---
source: math-core/src/lib.rs
expression: "\\operatorname{\\ae}"
---
Position: 14
UnknownCommand(
    "ae",
)
